# personal-website

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  justfile  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: getting-started.md  index.md
docs/scripts/: gen_ref_pages.py
frontend/: .prettierignore  .prettierrc.json  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/layouts/: ErrorFallback.tsx  RootLayout.tsx
frontend/src/components/ui/: Code.tsx
frontend/src/routes/: LandingPage.tsx  NotFound.tsx  index.tsx
frontend/src/stores/: useAppStore.ts
frontend/src/styles/: globals.css
src/personal_website/: __init__.py  log.py
static/: index.html
static/assets/: index-BhVAgPhk.js
tests/: test_log.py  test_placeholder.py
